2023.3.2
* Added IMAC rules and sequences for 2023

2023.3.1
* Fixed illegal flick roll options showing in figure editor (Issue #255)
* Cleaned up CIVA rules
* Changed update warning to not appear within 48 hours of update, to prevent nuisance warnings
* Added German language for interface (Issue #250)
* Made some changes to the manual to improve printing
* Corrected 2023 IAC Glider Primary Known presentation to 10K
* Fixed conv-qtrs in rules23.js to correctly match opposite-load flick rolls
* Updated code, including figuresXX.js, to allow for figure family translation
* Added IMAC forms
* Added 2023 AAC sequences and updated AAC Sportsman Free max K
* Fixed issue in rulesWorker.js that caused Group-combined to present incorrect Alerts
* Changed vkbeautify.js to vkbeautify.min.js

2023.2.1
* Updated JSZip to 3.10.1
* Updated NZAC rules for 2022

2023.1.3
* Added option to choose CIVA glider positioning K for judges only or electronic tracking
* Added feature to rotate figures in Grid view by setting as a subsequence with defined entry direction
* Several changes to roll font positioning and roll font scaling for tall sequences to keep roll text readable while preventing overlap
* Removed print dialog settings conversion (old format deprecated in 2019)
* Added 2023 CIVA sequences and guidance
* Updated CIVA rules for 2023
* Added Forms L & R for IAC
* Added 2023 IAC sequences
* Updated IAC rules for 2023
* Increased minimum gap between rolls to assure clear roll separation
* Slightly reduced logo size on Form L & R to make CIVA logo match header block height
* Moved wind arrow right on Form L when logo extends below header block
* CIVA logo with gradients did not print correctly, so removed gradients
* Added indication and explanation for optimal sequence size (except on phone layout)
* Added conversion for full figures in rule checking (Issue #35)
* Refactored part of rulesWorker.js
* Removed function makeTinyFormA as this is included in makeMiniFormA