@@ -139,7 +139,7 @@
     <script src="js/rules/rules22-france.js" type="text/javascript"></script>
     <script src="js/rules/rules15-ga.js" type="text/javascript"></script>
     <script src="js/rules/rules23-iac.js" type="text/javascript"></script>
-    <script src="js/rules/rules23-imac.js" type="text/javascript"></script>
+    <!-- <script src="js/rules/rules23-imac.js" type="text/javascript"></script> -->
     <script src="js/rules/rules21-glider-iac.js" type="text/javascript"></script>
     <script src="js/rules/rules22-nzac.js" type="text/javascript"></script>
     <script src="js/rules/rules20-saa.js" type="text/javascript"></script>
