@@ -1,5 +1,6 @@
 2023.3.2
-* Added IMAC rules and sequences for 2023
+* Added IMAC sequences for 2023
+* Fixed issue in rule checking algorithm for figures that can not have rolls
 
 2023.3.1
 * Fixed illegal flick roll options showing in figure editor (Issue #255)
